# text-expander

./: README.md  pyproject.toml
text_expander/: main.py  match.py  matchs.py
